--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-man \
 	--enable-mp3 \
 	--enable-mp4 \
+	--enable-musicbrainz \
 	--enable-nautilus-actions \
 	--enable-speex \
 	--enable-tests \
@@ -54,6 +55,7 @@ easytag_SOURCES = \
 	src/log.c \
 	src/main.c \
 	src/misc.c \
+	src/musicbrainz.c \
 	src/musicbrainz_dialog.c \
 	src/picture.c \
 	src/playlist_dialog.c \
@@ -107,6 +109,7 @@ easytag_headers = \
 	src/load_files_dialog.h \
 	src/log.h \
 	src/misc.h \
+	src/musicbrainz.h \
 	src/musicbrainz_dialog.h \
 	src/picture.h \
 	src/playlist_dialog.h \
